# surfclaw

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Surfclaw_Pitch_Deck.pptx  benchmark.py  generate_ppt.py  pyproject.toml  react-app.js  run_surfclaw.bat  setup.bat  setup.sh  walkthrough.md
.agents/: AGENTS.md
neurons/: __init__.py  miner.py  validator.py
src/: bitsec_bridge.rs  firecracker.rs  lib.rs  mcp.rs  parser.rs  scheduler.rs
template/: __init__.py  memory.py  protocol.py  surfclaw_kernel.py
template/base/: __init__.py  miner.py  neuron.py  validator.py
tests/: test_bitsec_integration.py  test_robustness_and_compliance.py  test_subnet_local.py
website/: index.html  package-lock.json  package.json  sync_brain.ps1
website/ai_docs/: chat_history.md  implementation_plan.md  surfllm_architecture.md  task.md
website/ai_docs/agent_brain/: cost_analysis.md  cost_analysis.md.metadata.json  deployment_guide.md  deployment_guide.md.metadata.json  implementation_plan.md.metadata.json  surfllm_architecture.md  surfllm_architecture.md.metadata.json  task.md.metadata.json  virtuals_submission_kit.md  virtuals_submission_kit.md.metadata.json  walkthrough.md  walkthrough.md.metadata.json
website/ai_docs/logs/: transcript.jsonl  transcript_full.jsonl
website/scratch/: check_hf.py  dataset_generator.js  dataset_generator.py  merge_weights.py  train_rl.py  train_sft.py  validate_dataset.js
website/src/: App.jsx  index.css
website/src/components/: ArchitectureMap.jsx  ContactForm.jsx  Footer.jsx  GrowthCanvas.jsx  Hero.jsx  InteractiveDemo.jsx  (+5 more)
(+20 files in other folders)
